Working on spawn command
Working on spawn command saved in mysql db

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -53,3 +53,6 @@ commands:
   pay:
     aliases: [payer]
     description: Paie un joueur donné d'un montant donné
+  shop:
+    aliases: [boutique]
+    description: Ouvre le shop au joueur
