Spawn command working
Spawn command is now working and saved in db.
Made a function to create location depending on world and type (spawn → 1, warp → 2, etc...) saved in db

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -53,6 +53,7 @@ Tpa:
     usage: "%prefix %&a/tpaccept"
     sender: "%prefix %&e%target %&6a accepté votre demande de téléportation"
     target: "%prefix %&6Vous avez accepté la demande de téléportation de %&e%sender"
+    norequest: "%prefix %&6Vous n'avez pas de requête de téléportation  "
   deny:
     usage: "%prefix %&a/tpadeny"
     sender: "%prefix %&e%target %&6a refusé votre demande de téléportation"
